礼包分享标题和订单列表展示拼团ID

--- a/app/scripts/十万少年漫游十大博物馆.html
+++ b/app/scripts/十万少年漫游十大博物馆.html
@@ -171,7 +171,7 @@
                                     于是
                                 </p>
                                 <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; text-align: center; word-wrap: break-word !important;">
-                                    <strong style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">便有了这场“在家逛遍世界十大博物馆”的众筹。</strong>
+                                    <strong style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">便有了这场“在家逛遍世界十大博物馆”的直播。</strong>
                                 </p>
                             </section>
                         </section>
@@ -224,10 +224,59 @@
                     7.以技术驱动教育，以游戏化、自适应、任务型等方式等实现学习效率革命。
                 </p>
                 <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; word-wrap: break-word !important;">
-                    所以，我希望这次众筹，带给孩子的不仅仅是十场直播，更是一次发现新的自己，打开新世界的旅程。
+                    所以，我希望这次活动，带给孩子的不仅仅是十场直播，更是一次发现新的自己，打开新世界的旅程。
                 </p>
                 <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; word-wrap: break-word !important;">
                     <br/>
+                </p>
+            </section>
+        </section>
+    </section>
+    <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
+        <section class="" style="margin-top: 0.5em; margin-bottom: 0.5em; max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
+            <section class="" style="margin-right: 1em; margin-left: 1em; max-width: 100%; box-sizing: border-box; height: 0px; border-top-width: 1.5em; border-top-style: solid; border-bottom-width: 1.5em; border-bottom-style: solid; border-bottom-color: rgb(160, 160, 160); border-top-color: rgb(160, 160, 160); word-wrap: break-word !important; border-left-width: 1.5em !important; border-left-style: solid !important; border-left-color: transparent !important; border-right-width: 1.5em !important; border-right-style: solid !important; border-right-color: transparent !important;"></section>
+            <section class="" style="margin: -2.75em 1.65em -2.3em; max-width: 100%; box-sizing: border-box; height: 0px; border-width: 1.3em; border-style: solid; border-color: rgb(255, 255, 255) transparent; word-wrap: break-word !important;"></section>
+            <section class="" style="max-width: 100%; box-sizing: border-box; height: 2.6em; word-wrap: break-word !important;">
+                <section style="margin-right: 2.1em; margin-left: 2.1em; max-width: 100%; box-sizing: border-box; height: 0px; vertical-align: middle; border-top-width: 1.1em; border-top-style: solid; border-bottom-width: 1.1em; border-bottom-style: solid; border-bottom-color: rgb(160, 160, 160); border-top-color: rgb(160, 160, 160); word-wrap: break-word !important; border-left-width: 1.1em !important; border-left-style: solid !important; border-left-color: transparent !important; border-right-width: 1.1em !important; border-right-style: solid !important; border-right-color: transparent !important;">
+                    <section class="" style="margin-top: -0.8em; max-width: 100%; box-sizing: border-box; text-align: center; color: rgb(7, 7, 7); word-wrap: break-word !important;">
+                        <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; word-wrap: break-word !important;">
+                            <strong style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">联合发起人</strong>
+                        </p>
+                    </section>
+                </section>
+            </section>
+        </section>
+    </section>
+    <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
+        <section class="" style="margin-top: 10px; margin-bottom: 10px; max-width: 100%; box-sizing: border-box; text-align: center; word-wrap: break-word !important;">
+            <img class="" data-ratio="0.3671875" src="http://resource.huijiame.com/5954a19e49b9c8OtBoqGuYs.png" data-type="png" data-w="640" style="box-sizing: border-box; vertical-align: middle; word-wrap: break-word !important; width: auto !important; visibility: visible !important;"/>
+        </section>
+    </section>
+    <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
+        <section class="" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
+            <section class="" style="max-width: 100%; box-sizing: border-box; font-size: 14px; word-wrap: break-word !important;">
+                <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; text-align: justify; word-wrap: break-word !important;">
+                    <br/>
+                </p>
+                <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; text-align: justify; word-wrap: break-word !important;">
+                    返利成立于2006年，是中国领先的电商导购平台，拥有用户超1.4亿，为用户提供涵盖线上、线下消费的360°的返利服务，包括网上购物、线下刷卡、金融保险、旅行团购等。
+                </p>
+            </section>
+        </section>
+    </section>
+    <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
+        <section class="" style="margin-top: 10px; margin-bottom: 10px; max-width: 100%; box-sizing: border-box; text-align: center; word-wrap: break-word !important;">
+            <img class="" data-ratio="0.3671875" src="http://resource.huijiame.com/5954c564a49fdmfuZ0G1bQX.png" data-type="png" data-w="640" style="box-sizing: border-box; vertical-align: middle; word-wrap: break-word !important; width: auto !important; visibility: visible !important;"/>
+        </section>
+    </section>
+    <section class="" powered-by="xiumi.us" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
+        <section class="" style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">
+            <section class="" style="max-width: 100%; box-sizing: border-box; font-size: 14px; word-wrap: break-word !important;">
+                <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; text-align: justify; word-wrap: break-word !important;">
+                    <br/>
+                </p>
+                <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; text-align: justify; word-wrap: break-word !important;">
+                    关注【返利优选】并回复“福利”，可参与0元购一箱莫斯利安酸奶！
                 </p>
             </section>
         </section>
@@ -327,7 +376,7 @@
                                     <section style="margin-right: 2.1em; margin-left: 2.1em; height: 0px; vertical-align: middle; border-top-width: 1.1em; border-top-style: solid; border-top-color: rgb(160, 160, 160); border-bottom-width: 1.1em; border-bottom-style: solid; border-bottom-color: rgb(160, 160, 160); box-sizing: border-box; border-left-width: 1.1em !important; border-left-style: solid !important; border-left-color: transparent !important; border-right-width: 1.1em !important; border-right-style: solid !important; border-right-color: transparent !important;">
                                         <section class="" style="margin-top: -0.8em; text-align: center; color: rgb(7, 7, 7);">
                                             <p>
-                                                <strong>认领众筹，你可以得到什么？</strong>
+                                                <strong>参与活动，你可以得到什么？</strong>
                                             </p>
                                         </section>
                                     </section>
@@ -338,16 +387,16 @@
                             <br/>
                         </p>
                         <p>
-                            <span style="font-size: 14px;">1、<strong>在6.1—8.19期间</strong>认领众筹的家长将以<strong>39.9元/份</strong>的超低价格观看<strong>十场直播</strong>，<strong>10人成团</strong>更有<strong>19.9元/份</strong>的超低团购价！每场直播时长约为<strong>1小时</strong>，直播内容包括但不仅限于美术作品、建筑设计、历史故事等。</span>
+                            <span style="font-size: 14px;">1、<strong>在6.1—8.19期间</strong>购买活动的家长将以<strong>39.9元/份</strong>的超低价格观看<strong>十场直播</strong>，<strong>10人成团</strong>更有<strong>19.9元/份</strong>的超低团购价！每场直播时长约为<strong>1小时</strong>，直播内容包括但不仅限于美术作品、建筑设计、历史故事等。</span>
                         </p>
                         <p>
-                            <span style="font-size: 14px;">2、直播结束后，认领众筹的家长可免费获得资源，观看回放。</span>
+                            <span style="font-size: 14px;">2、直播结束后，购买活动的家长可免费获得资源，观看回放。</span>
                         </p>
                         <p>
-                            <span style="font-size: 14px;">3、众筹结束后，观看直播的价格将上调为99元/份。</span>
+                            <span style="font-size: 14px;">3、超低价购买时间结束后，观看直播的价格将上调为99元/份。</span>
                         </p>
                         <p>
-                            <span style="font-size: 14px;">4、认领众筹的家长将有权对直播候选人进行评选，选出最受信任的主播进行直播。</span>
+                            <span style="font-size: 14px;">4、<span style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; background-color: rgb(255, 255, 255);">购买活动</span>的家长将有权对直播看点进行投票选择，选出大家最感兴趣的直播看点。</span>
                         </p>
                         <p>
                             <br/>
@@ -391,10 +440,10 @@
                                                                 <span style="letter-spacing: 0px; line-height: 1.6; font-size: 14px;">1、<strong>直播时间：8月19日—8月28日</strong></span>
                                                             </p>
                                                             <p>
-                                                                <span style="font-size: 14px;">2、10万份众筹认领成功之后，认领众筹的家长将于<strong>8月1日—8月18日期间收到直播的链接和邀请</strong><strong>，以及具体直播时间</strong>；</span>
+                                                                <span style="font-size: 14px;">2、10万份活动售出之后，<span style="color: rgb(62, 62, 62); font-family: 微软雅黑; font-size: 14px; background-color: rgb(255, 255, 255);">购买活动</span>的家长将于<strong>8月1日—8月18日期间收到直播的链接和邀请</strong><strong>，以及具体直播时间</strong>；</span>
                                                             </p>
                                                             <p>
-                                                                <span style="font-size: 14px;">3、直播链接和邀请以及具体直播时间将以<strong>短信或微信后台</strong>的方式通知，请认领众筹的家长<strong>千万不要取关公众号</strong>哦，以防遗漏信息。</span>
+                                                                <span style="font-size: 14px;">3、直播链接和邀请以及具体直播时间将以<strong>短信或微信后台</strong>的方式通知，请购买活动的家长<strong>千万不要取关公众号</strong>哦，以防遗漏信息。</span>
                                                             </p>
                                                             <p>
                                                                 <span style="font-size: 14px;">4、倘若遇到不可抗情况，直播将延期，具体时间会另行通知。</span>
@@ -461,7 +510,7 @@
                 <section style="margin-right: 2.1em; margin-left: 2.1em; max-width: 100%; box-sizing: border-box; height: 0px; vertical-align: middle; border-top-width: 1.1em; border-top-style: solid; border-top-color: rgb(160, 160, 160); border-bottom-width: 1.1em; border-bottom-style: solid; border-bottom-color: rgb(160, 160, 160); word-wrap: break-word !important; border-left-width: 1.1em !important; border-left-style: solid !important; border-left-color: transparent !important; border-right-width: 1.1em !important; border-right-style: solid !important; border-right-color: transparent !important;">
                     <section class="" style="margin-top: -0.8em; max-width: 100%; box-sizing: border-box; text-align: center; color: rgb(7, 7, 7); word-wrap: break-word !important;">
                         <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; word-wrap: break-word !important;">
-                            <strong style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">如何筛选主播？</strong>
+                            <strong style="max-width: 100%; box-sizing: border-box; word-wrap: break-word !important;">如何选择直播看点？</strong>
                         </p>
                     </section>
                 </section>
@@ -475,7 +524,7 @@
                     <br/>
                 </p>
                 <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; word-wrap: break-word !important;">
-                    我们将向世界顶级的艺术学院留学生发起直播邀请，确保此次直播的专业性！前期由发起人选出10名直播候选人，每位候选人都将做自我介绍，参与众筹的将对候选人进行投票，根据票数的高低决定最终参与直播的人选。
+                    我们将在直播之前筛选建筑、历史、艺术品等多个博物馆看点，让所有购买直播活动的家长进行评选，选出大家最感兴趣的博物馆直播看点。
                 </p>
                 <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; word-wrap: break-word !important;">
                     <br/>
@@ -525,16 +574,34 @@
                     <span style="font-size: 14px;"><strong style="color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">A :&nbsp;</strong>时间会尽量根据国内时间安排，但是也需要考虑和各个国家不同的时差以及博物馆的开馆时间，如时间实在不可调和，建议看录播。</span>
                 </p>
                 <p>
-                    <strong><span style="font-size: 14px;">Q :&nbsp;众筹完怎样通知？</span></strong>
+                    <strong><span style="font-size: 14px;">Q : 10万份活动购买完成之后怎样通知家长观看直播？</span></strong>
                 </p>
                 <p style="margin-bottom: 15px;">
-                    <span style="font-size: 14px;"><strong style="color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">A :&nbsp;</strong>众筹完成后，我们将以短信和微信的方式通知所有认购此次活动的用户，请关注我们官方公众号“Ahaschool芝麻学社”，及时了解最新资讯。</span>
+                    <span style="font-size: 14px;"><strong style="color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">A :&nbsp;</strong>10万份活动购买完成后，我们将以短信和微信的方式通知所有认购此次活动的用户，请关注我们官方公众号“Ahaschool芝麻学社”，及时了解最新资讯。</span>
                 </p>
                 <p>
                     <strong><span style="font-size: 14px;">Q :&nbsp;直播的博物馆确定是哪十个吗？</span></strong>
                 </p>
                 <p>
                     <span style="font-size: 14px;"><strong style="color: rgb(62, 62, 62); font-family: sans-serif; line-height: 25.6px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">A :&nbsp;</strong>直播的场馆目前暂定为购买详情中的十大博物馆，但具体要根据时差、场馆开放情况等进行调整，实际以播出为准。</span>
+                </p>
+                <p>
+                    <strong><br/></strong>
+                </p>
+                <p>
+                    <strong>Q：直播是否清晰？</strong><br/>
+                </p>
+                <p>
+                    <strong>A：</strong>我们会邀请专业的摄影团队进行直播拍摄，并积极和各大知名直播平台进行合作沟通，确保直播质量。
+                </p>
+                <p>
+                    <br/>
+                </p>
+                <p style="color: rgb(62, 62, 62); font-size: 14px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">
+                    <strong>Q：博物馆确定可以直播吗？</strong><br/>
+                </p>
+                <p style="color: rgb(62, 62, 62); font-size: 14px; text-align: justify; white-space: normal; background-color: rgb(255, 255, 255);">
+                    <strong>A：</strong>为了保证直播顺利进行，我们对全世界的顶级博物馆进行了全方面筛选，选出10大博物馆及备选博物馆，根据不同博物馆的需要，配备专业讲解员、提前递交拍摄申请等。具体可以参考<a href="https://shimo.im/doc/br6OIvcv5bgARabl/" target="_self" style="color: rgb(255, 0, 0); text-decoration: underline;"><span style="color: rgb(255, 0, 0);">十大博物馆及备选博物馆参观说明</span></a>
                 </p>
                 <p style="max-width: 100%; box-sizing: border-box; min-height: 1em; word-wrap: break-word !important;">
                     <br/>
